# agent-sdk-meetings

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: azure-resources.md  configuration.md  docker.md  entra-setup.md  running.md  security.md  teams-application-access-policy.md  troubleshooting.md
src/meeting_agent/: __init__.py  __main__.py  app.py  auth.py  config.py  graph_client.py  summarizer.py  transcript_parser.py
